@@ -22,6 +22,7 @@ License: GPLv3
 * support multi webqq account
 * support offline file (not official).
 * support font style
+* support block group message
 
 ## empathy support (via telepathy-haze)
 * send / recv text messages
@@ -59,6 +60,7 @@ lwqq库是一个非常安全有效的webqq协议的库.
 * 支持多账户登录
 * 支持离线文件(简易)
 * 支持文本样式
+* 支持群消息屏蔽
 
 ## empathy support (via telepathy-haze)
 * 支持发送接受文本消息
