@@ -1,6 +1,9 @@
 pidgin-lwqq : the webqq protocol for pidgin based on lwqq.
 author : xiehuc@gmail.com
 
+dev (09/25/2012):
+	* new feature: support block group message
+
 dev (09/02/2012):
 	* new feature: support font style
 
